src/tests/snapshots/tiny_lang__tests__test_parser__struct_instance_parsing.snap
---
source: src/tests/test_parser.rs
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        StructDef(
            Struct {
                name: "Something",
                fields: [
                    (
                        Ident(
                            "name",
                        ),
                        UnsignedInteger,
                    ),
                    (
                        Ident(
                            "age",
                        ),
                        UnsignedInteger,
                    ),
                    (
                        Ident(
                            "is_dev",
                        ),
                        Bool,
                    ),
                ],
            },
        ),
        Let(
            Ident(
                "var",
            ),
            None,
            StructInstance(
                "Something",
                [
                    (
                        Ident(
                            "name",
                        ),
                        Literal(
                            UnsignedInteger(
                                3434,
                            ),
                        ),
                    ),
                    (
                        Ident(
                            "age",
                        ),
                        Literal(
                            UnsignedInteger(
                                2424,
                            ),
                        ),
                    ),
                    (
                        Ident(
                            "is_dev",
                        ),
                        Literal(
                            Bool(
                                false,
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ],
)
