src/tests/snapshots/tiny_lang__tests__test_parser__struct_parsing.snap
---
source: src/tests/test_parser.rs
assertion_line: 84
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        StructDef(
            Struct {
                name: "something",
                fields: [
                    (
                        Ident(
                            "name",
                        ),
                        String,
                    ),
                    (
                        Ident(
                            "age",
                        ),
                        UnsignedInteger,
                    ),
                    (
                        Ident(
                            "is_dev",
                        ),
                        Bool,
                    ),
                ],
            },
        ),
    ],
)
